--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
+body {
+  overscroll-behavior: contain;
+}
+
+#play_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+#play_container p,
+#play_container h1 {
+  text-align: center;
+}
+
 .subject {
   text-align: center;
   display: block;
@@ -21,7 +38,7 @@
 }
 
 .players_Box {
-  width: 400px;
+  width: 250px;
   display: flex;
   background: green;
   justify-content: space-between;
@@ -32,8 +49,8 @@
 }
 
 .players_Box p {
-  text-align: end;
-  width: 300px;
+  text-align: end !important;
+  width: 150px;
   color: white;
   padding: 0;
   margin: 0;
@@ -49,8 +66,15 @@
   color: white;
 }
 
-#start_round {
-  margin: auto;
+#start_round,
+#show_player_the_option,
+#give_the_device_to_next_player,
+#ask_other_player,
+#start_voicing,
+#show_scores,
+#start_new_round {
+  display: block;
+  margin: 10px auto;
 }
 
 .correct {
@@ -59,4 +83,23 @@
 
 .not_correct {
   background-color: red;
+}
+
+.name {
+  font-weight: bold;
+  color: crimson;
+}
+
+.player_options,
+.options {
+  width: 200px;
+  height: 27px;
+  display: flex;
+  margin: 20px auto;
+  background-color: green;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
 }
